force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Other_DER_Annual_Prod__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Other_DER_Annual_Prod__c</fullName>
    <inlineHelpText>Existing and/or Future Other DER Annual Production</inlineHelpText>
    <label>Existing/Future Other DER Annual Prod</label>
    <type>TextArea</type>
</CustomField>