force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Other_DER_Owned_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Other_DER_Owned_or_Lease__c</fullName>
    <inlineHelpText>Existing and/or Future Other DER Owned or Leased (PPA)</inlineHelpText>
    <label>Existing/Future Other DER Owned or Lease</label>
    <type>TextArea</type>
</CustomField>