force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Other_Diesel_Generator__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Other_Diesel_Generator__c</fullName>
    <inlineHelpText>Existing and/or Future Other Diesel Generator Size kW</inlineHelpText>
    <label>Existing/Future Other Diesel Generator</label>
    <type>TextArea</type>
</CustomField>