force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Solar_Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Solar_Annual_Production__c</fullName>
    <label>Existing/Future Solar Annual Production</label>
    <type>TextArea</type>
</CustomField>