force-app/main/default/objects/Project_Assessment__c/fields/Existing_Future_Solar_Owned_Leased_PPA__c.field-meta.xml
<CustomField>
    <fullName>Existing_Future_Solar_Owned_Leased_PPA__c</fullName>
    <inlineHelpText>Existing and/or Future Solar Owned or Leased (PPA)</inlineHelpText>
    <label>Existing/Future Solar Owned/Leased(PPA)</label>
    <type>TextArea</type>
</CustomField>