force-app/main/default/objects/Project_Assessment__c/fields/Existing_generators_on_site__c.field-meta.xml
<CustomField>
    <fullName>Existing_generators_on_site__c</fullName>
    <inlineHelpText>Are there existing generators on site - if so how many? Can be answered by providing air permit</inlineHelpText>
    <label>Existing generators on site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>