force-app/main/default/objects/Project_Assessment__c/fields/Existing_Geotech_Soils_Reports__c.field-meta.xml
<CustomField>
    <fullName>Existing_Geotech_Soils_Reports__c</fullName>
    <label>Existing Geotech / Soils Reports</label>
    <type>TextArea</type>
</CustomField>