force-app/main/default/objects/Project_Assessment__c/fields/Existing_natural_gas_connect__c.field-meta.xml
<CustomField>
    <fullName>Existing_natural_gas_connect__c</fullName>
    <inlineHelpText>Is there an existing natural gas connection on site?</inlineHelpText>
    <label>Existing natural gas connection on site?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>