force-app/main/default/objects/Project_Assessment__c/fields/Existing_or_planned_BESS_capacity__c.field-meta.xml
<CustomField>
    <fullName>Existing_or_planned_BESS_capacity__c</fullName>
    <label>Existing or planned BESS capacity</label>
    <type>TextArea</type>
</CustomField>