force-app/main/default/objects/Project_Assessment__c/fields/Existing_planned_solar_BESS_other_DER__c.field-meta.xml
<CustomField>
    <fullName>Existing_planned_solar_BESS_other_DER__c</fullName>
    <label>Existing/planned solar,BESS/other DER?</label>
    <type>TextArea</type>
</CustomField>