force-app/main/default/objects/Project_Assessment__c/fields/Existing_planned_solar_system_size_kW__c.field-meta.xml
<CustomField>
    <fullName>Existing_planned_solar_system_size_kW__c</fullName>
    <inlineHelpText>Existing/planned solar system size (kW)/annual production (kWh)</inlineHelpText>
    <label>Existing/planned solar system size (kW)</label>
    <type>TextArea</type>
</CustomField>