force-app/main/default/objects/Project_Assessment__c/fields/Existing_Switchgear_POC_Connection__c.field-meta.xml
<CustomField>
    <fullName>Existing_Switchgear_POC_Connection__c</fullName>
    <inlineHelpText>Existing Switchgear Point Of Connection (POC) Size</inlineHelpText>
    <label>Existing Switchgear POC Connection</label>
    <type>TextArea</type>
</CustomField>