force-app/main/default/objects/Project_Assessment__c/fields/Existing_Title_Report_Boundary_Survey__c.field-meta.xml
<CustomField>
    <fullName>Existing_Title_Report_Boundary_Survey__c</fullName>
    <label>Existing Title Report / Boundary Survey</label>
    <type>TextArea</type>
</CustomField>