force-app/main/default/objects/Project_Assessment__c/fields/Expected_air_permitting_timeline_months__c.field-meta.xml
<CustomField>
    <fullName>Expected_air_permitting_timeline_months__c</fullName>
    <label>Expected air permitting timeline(months)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>