force-app/main/default/objects/Project_Assessment__c/fields/Expected_BLDG_permit_timeline_months__c.field-meta.xml
<CustomField>
    <fullName>Expected_BLDG_permit_timeline_months__c</fullName>
    <inlineHelpText>Expected building permitting timeline (months)</inlineHelpText>
    <label>Expected BLDG permit timeline (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>