force-app/main/default/objects/Project_Assessment__c/fields/Expected_COD_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_COD_Date__c</fullName>
    <label>Expected COD Date</label>
    <type>Date</type>
</CustomField>