force-app/main/default/objects/Project_Assessment__c/fields/Expected_gas_connection_timeline_months__c.field-meta.xml
<CustomField>
    <fullName>Expected_gas_connection_timeline_months__c</fullName>
    <label>Expected gas connection timeline(months)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>