force-app/main/default/objects/Project_Assessment__c/fields/Facility_has_existing_air_permit__c.field-meta.xml
<CustomField>
    <fullName>Facility_has_existing_air_permit__c</fullName>
    <inlineHelpText>Does the facility have an existing air permit? (Sales to obtain from customer and provide link if so)</inlineHelpText>
    <label>Facility has existing air permit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>