force-app/main/default/objects/Project_Assessment__c/fields/Fuel_Lab_Reports__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Lab_Reports__c</fullName>
    <label>Fuel Lab Reports</label>
    <type>TextArea</type>
</CustomField>