force-app/main/default/objects/Project_Assessment__c/fields/Fuel_Service_Account_Representative__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Service_Account_Representative__c</fullName>
    <inlineHelpText>Fuel Service Account Representative Contact Information</inlineHelpText>
    <label>Fuel Service Account Representative</label>
    <type>TextArea</type>
</CustomField>