force-app/main/default/objects/Project_Assessment__c/fields/Further_Environmental_Screening_needed__c.field-meta.xml
<CustomField>
    <fullName>Further_Environmental_Screening_needed__c</fullName>
    <inlineHelpText>Further Environmental Screening needed?</inlineHelpText>
    <label>Further Environmental Screening needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>