force-app/main/default/objects/Project_Assessment__c/fields/Gas_Interconn_Public_Affairs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gas_Interconn_Public_Affairs_Notes__c</fullName>
    <label>Gas Interconn - Public Affairs Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>