force-app/main/default/objects/Project_Assessment__c/fields/Gas_Interconnection_Utility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gas_Interconnection_Utility_Notes__c</fullName>
    <label>Gas Interconnection -  Utility Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>