force-app/main/default/objects/Project_Assessment__c/fields/Gas_service_tariff_post_interconnection__c.field-meta.xml
<CustomField>
    <fullName>Gas_service_tariff_post_interconnection__c</fullName>
    <label>Gas service tariff-post interconnection</label>
    <length>200</length>
    <type>Text</type>
</CustomField>