force-app/main/default/objects/Project_Assessment__c/fields/Gas_Utility__c.field-meta.xml
<CustomField>
    <fullName>Gas_Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gas Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipName>Regulatory_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>