force-app/main/default/objects/Project_Assessment__c/fields/Generator_Sale_Agreement_GSA__c.field-meta.xml
<CustomField>
    <fullName>Generator_Sale_Agreement_GSA__c</fullName>
    <label>Generator Sale Agreement (GSA)</label>
    <type>TextArea</type>
</CustomField>