force-app/main/default/objects/Project_Assessment__c/fields/Grid_Connected_or_Off_Grid_installation__c.field-meta.xml
<CustomField>
    <fullName>Grid_Connected_or_Off_Grid_installation__c</fullName>
    <label>Grid-Connected or Off-Grid installation?</label>
    <type>TextArea</type>
</CustomField>