force-app/main/default/objects/Project_Assessment__c/fields/Has_MSE_performed_work_in_this_city__c.field-meta.xml
<CustomField>
    <fullName>Has_MSE_performed_work_in_this_city__c</fullName>
    <inlineHelpText>Have we performed work in this city? If so, are we authorized to do additional work there?</inlineHelpText>
    <label>Has MSE performed work in this city?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>