force-app/main/default/objects/Project_Assessment__c/fields/Hazardous_Materials_Toxins__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Materials_Toxins__c</fullName>
    <label>Hazardous Materials/Toxins</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>