force-app/main/default/objects/Project_Assessment__c/fields/Highly_priced_responsive_flexible_loads__c.field-meta.xml
<CustomField>
    <fullName>Highly_priced_responsive_flexible_loads__c</fullName>
    <inlineHelpText>Does the customer have highly priced responsive, flexible loads?</inlineHelpText>
    <label>Highly priced responsive/flexible loads?</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>