force-app/main/default/objects/Project_Assessment__c/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <label>Hours of Operation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>