force-app/main/default/objects/Project_Assessment__c/fields/Insurance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirements__c</fullName>
    <label>Insurance Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>