force-app/main/default/objects/Project_Assessment__c/fields/Integration_requirements__c.field-meta.xml
<CustomField>
    <fullName>Integration_requirements__c</fullName>
    <label>Integration requirements</label>
    <type>TextArea</type>
</CustomField>