force-app/main/default/objects/Project_Assessment__c/fields/Interconnection__c.field-meta.xml
<CustomField>
    <fullName>Interconnection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interconnection</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments7</relationshipName>
    <type>Lookup</type>
</CustomField>