force-app/main/default/objects/Project_Assessment__c/fields/Interconnection_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Interconnection_Voltage__c</fullName>
    <label>Interconnection Voltage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>