force-app/main/default/objects/Project_Assessment__c/fields/Is_ITC_included_in_the_project__c.field-meta.xml
<CustomField>
    <fullName>Is_ITC_included_in_the_project__c</fullName>
    <inlineHelpText>To identify any safe harbor issues.</inlineHelpText>
    <label>Is ITC included in the project?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>