force-app/main/default/objects/Project_Assessment__c/fields/Is_LGen_Backup_Kit_for_Grid_Forming_Incl__c.field-meta.xml
<CustomField>
    <fullName>Is_LGen_Backup_Kit_for_Grid_Forming_Incl__c</fullName>
    <inlineHelpText>Is LGen Backup Kit for Grid Forming Included</inlineHelpText>
    <label>Is LGen Backup Kit for Grid Forming Incl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>