force-app/main/default/objects/Project_Assessment__c/fields/Is_LGen_Part_of_or_Creating_a_Microgrid__c.field-meta.xml
<CustomField>
    <fullName>Is_LGen_Part_of_or_Creating_a_Microgrid__c</fullName>
    <label>Is LGen Part of/or Creating a Microgrid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>