force-app/main/default/objects/Project_Assessment__c/fields/Is_Mainspring_qualified_to_do_business__c.field-meta.xml
<CustomField>
    <fullName>Is_Mainspring_qualified_to_do_business__c</fullName>
    <label>Is Mainspring qualified to do business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>