force-app/main/default/objects/Project_Assessment__c/fields/Is_the_site_space_constrained_limiting__c.field-meta.xml
<CustomField>
    <fullName>Is_the_site_space_constrained_limiting__c</fullName>
    <label>Site space constrained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>