force-app/main/default/objects/Project_Assessment__c/fields/Is_there_a_planned_or_operating_PV_BESS__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_planned_or_operating_PV_BESS__c</fullName>
    <inlineHelpText>Is there a planned or operating PV, BESS or other DER at the site?</inlineHelpText>
    <label>Planned/Operating PV, BESS or other DER?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>