force-app/main/default/objects/Project_Assessment__c/fields/Is_there_available_headroom_at_the_POI__c.field-meta.xml
<CustomField>
    <fullName>Is_there_available_headroom_at_the_POI__c</fullName>
    <label>Is there available headroom at the POI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>