force-app/main/default/objects/Project_Assessment__c/fields/Is_this_a_planned_export_system__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_planned_export_system__c</fullName>
    <label>Is this a planned export system?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>