force-app/main/default/objects/Project_Assessment__c/fields/Islanding_Requirements_RE_COD_milestone__c.field-meta.xml
<CustomField>
    <fullName>Islanding_Requirements_RE_COD_milestone__c</fullName>
    <label>BUK Requirements RE: COD milestone</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>