force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Approval_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Approval_Requirements__c</fullName>
    <label>Landlord Approval Requirements</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>