force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners__c</fullName>
    <label>Landlord/Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>