force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Lease_Constraints__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Lease_Constraints__c</fullName>
    <label>Landlord/Owners Lease Constraints?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>