force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Lease_Deed_Documents__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Lease_Deed_Documents__c</fullName>
    <label>Landlord/Owners Lease / Deed Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>