force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Mailing_Address__c</fullName>
    <label>Landlord/Owners Mailing Address</label>
    <type>TextArea</type>
</CustomField>