force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Primary_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Primary_POC_Email__c</fullName>
    <label>Landlord/Owners Primary POC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>