force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Primary_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Primary_POC_Phone__c</fullName>
    <label>Landlord/Owners Primary POC Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>