force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Primary_POC_Title__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Primary_POC_Title__c</fullName>
    <label>Landlord/Owners Primary POC Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>