force-app/main/default/objects/Project_Assessment__c/fields/Landlord_Owners_Primary_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Owners_Primary_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord/Owners Primary Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Assessments (Landlord/Owners Primary Point of Contact)</relationshipLabel>
    <relationshipName>Project_Assessments2</relationshipName>
    <type>Lookup</type>
</CustomField>