force-app/main/default/objects/Project_Assessment__c/fields/LGen_Production_or_Other_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>LGen_Production_or_Other_Guarantees__c</fullName>
    <label>LGen Production or Other Guarantees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>