force-app/main/default/objects/Project_Assessment__c/fields/LGen_Use_Case_Scope_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LGen_Use_Case_Scope_Purpose__c</fullName>
    <description>EDS-4598</description>
    <label>LGen Use Case / Scope / Purpose</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>