force-app/main/default/objects/Project_Assessment__c/fields/Line_Side_or_Load_Side_Tap_of_the_POC__c.field-meta.xml
<CustomField>
    <fullName>Line_Side_or_Load_Side_Tap_of_the_POC__c</fullName>
    <label>Line Side or Load Side Tap of the POC</label>
    <type>TextArea</type>
</CustomField>