force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Annual_Load_Profile__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Annual_Load_Profile__c</fullName>
    <label>Link to Annual Load Profile</label>
    <type>TextArea</type>
</CustomField>