force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Existing_air_permit__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Existing_air_permit__c</fullName>
    <inlineHelpText>Sales to obtain from customer and provide link if there is an existing air permit</inlineHelpText>
    <label>Link to Existing air permit</label>
    <type>Url</type>
</CustomField>