force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Google_Map_close_up_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Google_Map_close_up_of_Facility__c</fullName>
    <description>Link to Google Map - close up of Facility</description>
    <label>Link to Google Map-close up of Facility</label>
    <type>Url</type>
</CustomField>