force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Google_Map_of_Site_and_Surroundi__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Google_Map_of_Site_and_Surroundi__c</fullName>
    <description>Link to Google Map of Site and Surroundings</description>
    <label>Link to Google Map of Site &amp; Surrounding</label>
    <type>Url</type>
</CustomField>