force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Indicative_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Indicative_Pricing__c</fullName>
    <label>Link to Indicative Pricing</label>
    <type>TextArea</type>
</CustomField>