force-app/main/default/objects/Project_Assessment__c/fields/Link_to_LGEN_equipment_cut_sheets__c.field-meta.xml
<CustomField>
    <fullName>Link_to_LGEN_equipment_cut_sheets__c</fullName>
    <label>Link to LGEN equipment cut sheets</label>
    <type>TextArea</type>
</CustomField>