force-app/main/default/objects/Project_Assessment__c/fields/Link_to_MSE_Production_Model_v3_9__c.field-meta.xml
<CustomField>
    <fullName>Link_to_MSE_Production_Model_v3_9__c</fullName>
    <label>Link to MSE Production Model (v3.9)</label>
    <type>TextArea</type>
</CustomField>