force-app/main/default/objects/Project_Assessment__c/fields/Link_to_Presentation_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Presentation_to_Customer__c</fullName>
    <label>Link to Presentation to Customer</label>
    <type>TextArea</type>
</CustomField>