force-app/main/default/objects/Project_Assessment__c/fields/Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages__c</fullName>
    <label>Liquidated Damages</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>