force-app/main/default/objects/Project_Assessment__c/fields/Live_Stock_Agricultural__c.field-meta.xml
<CustomField>
    <fullName>Live_Stock_Agricultural__c</fullName>
    <label>Live Stock/Agricultural</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>