force-app/main/default/objects/Project_Assessment__c/fields/LNTP_for_any_Mainspring_provided_Support__c.field-meta.xml
<CustomField>
    <fullName>LNTP_for_any_Mainspring_provided_Support__c</fullName>
    <label>LNTP for any Mainspring-provided Support</label>
    <type>TextArea</type>
</CustomField>