force-app/main/default/objects/Project_Assessment__c/fields/Mainspring_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Mainspring_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mainspring Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>