force-app/main/default/objects/Project_Assessment__c/fields/Mainspring_Invoicing_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Mainspring_Invoicing_Milestones__c</fullName>
    <label>Mainspring Invoicing Milestones</label>
    <type>TextArea</type>
</CustomField>