force-app/main/default/objects/Project_Assessment__c/fields/Metering_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Metering_Program_Type__c</fullName>
    <label>Metering Program Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net Metering</fullName>
            </value>
            <value>
                <fullName>Virtual Net Metering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>