force-app/main/default/objects/Project_Assessment__c/fields/MSE_Financial_Analysis_Sales_Tool_v9_1__c.field-meta.xml
<CustomField>
    <fullName>MSE_Financial_Analysis_Sales_Tool_v9_1__c</fullName>
    <inlineHelpText>Link to MSE Financial Analysis (Sales Tool v9.1)</inlineHelpText>
    <label>MSE Financial Analysis (Sales Tool v9.1)</label>
    <type>TextArea</type>
</CustomField>