force-app/main/default/objects/Project_Assessment__c/fields/MSE_gets_high_pressure_gas_connection__c.field-meta.xml
<CustomField>
    <fullName>MSE_gets_high_pressure_gas_connection__c</fullName>
    <inlineHelpText>Can we get high pressure gas connection at this site?</inlineHelpText>
    <label>MSE gets high pressure gas connection?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>