force-app/main/default/objects/Project_Assessment__c/fields/MSE_worked_with_Air_District_before__c.field-meta.xml
<CustomField>
    <fullName>MSE_worked_with_Air_District_before__c</fullName>
    <inlineHelpText>Have we worked with this Air District previously? Check listing.  If so, are we authorized to do additional work in the territory?</inlineHelpText>
    <label>MSE worked with Air District before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>