force-app/main/default/objects/Project_Assessment__c/fields/My_project_Assessments__c.field-meta.xml
<CustomField>
    <fullName>My_project_Assessments__c</fullName>
    <formula>OR(
    Sales_Analyst__r.Alias = $User.Alias,
    Environmental_Permitting__r.Alias = $User.Alias,
    Project_Delivery_Point_Person__r.Alias = $User.Alias,
    Public_Affairs_Point_Person__r.Alias = $User.Alias,
    Legal__r.Alias = $User.Alias
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My project Assessments</label>
    <type>Checkbox</type>
</CustomField>