force-app/main/default/objects/Project_Assessment__c/fields/NEPA_applicability_document_needed__c.field-meta.xml
<CustomField>
    <fullName>NEPA_applicability_document_needed__c</fullName>
    <label>NEPA applicability (document needed)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>