force-app/main/default/objects/Project_Assessment__c/fields/NGOM_Required_for_Existing_DER__c.field-meta.xml
<CustomField>
    <fullName>NGOM_Required_for_Existing_DER__c</fullName>
    <label>NGOM Required for Existing DER?</label>
    <type>TextArea</type>
</CustomField>