force-app/main/default/objects/Project_Assessment__c/fields/Noise_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Noise_restrictions__c</fullName>
    <label>Noise restrictions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>