force-app/main/default/objects/Project_Assessment__c/fields/Non_standard_air_permit_requirements__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_air_permit_requirements__c</fullName>
    <inlineHelpText>Non-standard air permit requirements? (e.g., NOx, SOx, particulate matter, formaldehyde)</inlineHelpText>
    <label>Non-standard air permit requirements?</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>