force-app/main/default/objects/Project_Assessment__c/fields/Number_of_generators_existing__c.field-meta.xml
<CustomField>
    <fullName>Number_of_generators_existing__c</fullName>
    <label>Number of generators existing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>